[package]
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"
name = "manning-lp-async-rust-project-1-m1"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.6", features = ["derive"] }
yahoo_finance_api = { version = "1.2.2" }
async-std = { version = "1.11.0", features = ["attributes"] }
async-trait = { version = "0.1.53" }